--- a/live-react-refactor/public/index.html
+++ b/live-react-refactor/public/index.html
@@ -16,7 +16,7 @@
    
    <div id="react-root"></div> 
 
-   <script src="bundle.js" type="module"></script>
+   <script src="bundle.js"></script>
 
   </body>
 </html>
